--- a/src/webapp/WEB-INF/pages/users/edit.html
+++ b/src/webapp/WEB-INF/pages/users/edit.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<form th:method="PATCH" th:action="@{/users/{id}(id=${person.getId()})}" th:object="${person}">
+<form th:method="PATCH" th:action="@{/users/{id}(id=${user.getId()})}" th:object="${user}">
     <label for="name">Enter</label>
     <input type="text" th:field="*{name}" id="name"/>
 <br/>
