--- a/src/webapp/WEB-INF/pages/users/listUsers.html
+++ b/src/webapp/WEB-INF/pages/users/listUsers.html
@@ -6,13 +6,13 @@
 </head>
 <body>
 
-<div th:each="person : ${people}">
-  <a th:href="@{/users/{id}(id=${person.getId()})}"
-     th:text="${person.getName() + ', ' + person.getAge()}">user</a>
+<div th:each="user : ${users}">
+  <a th:href="@{/users/{id}(id=${user.getId()})}"
+     th:text="${user.getName() + ', ' + user.getAge()}">user</a>
 </div>
 <br/>
 <hr/>
-<a href="/users/new">Create new Person</a>
+<a href="/users/new">Create new User</a>
 </body>
 </html>
 
